Fixed bug #43968 (Extending internal class causes a crash) The fix is a workaround for GCC optizer bug.